--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
     <title>Consulte Clima!</title>
 </head>
 <body>
-    <h1>teste</h1>
+    <main id="container">
+        <div id="header">
+            <h3>Confira o clíma da sua cidade:</h3>
+            <div class="form">
+                <input type="text" id="textCity" placeholder="Digite sua cidade...">
+                <span class="button">🔍</span>
+            </div>
+            <hr>
+        </div>
+        <div class="weather">
+            <p id="city">Brasilía</p>
+            <p id="temperatura">20</p>
+            <p id="clima">Nublado</p>
+            <p id="humidade">60%</p>
+        </div>
+    </main>
 
     <script type="module" src="./src/main.js"></script>
 </body>
