Desenvolvendo lógica do projeto

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <hr>
         </div>
         <div class="weather">
-            <p id="city">Brasilía</p>
-            <p id="temperatura">20</p>
-            <p id="clima">Nublado</p>
-            <p id="humidade">60%</p>
+            <p id="city"></p>
+            <p id="temperatura"> <span class="temp"></span>&deg;C</p>
+            <p id="clima"></p>
+            <p id="humidade"></p>
         </div>
     </main>
 
