--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="weather">
             <p id="city"></p>
-            <p id="temperatura"></p>
+            <p id="temperatura"> <span class="temp"></span>&deg;C</p>
             <p id="clima"></p>
             <p id="humidade"></p>
         </div>
