--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <div class="weather">
             <p id="city"></p>
-            <p id="temperatura"> <span class="temp"></span>&deg;C</p>
+            <p id="temperatura"> <span class="temp"></span></p>
             <p id="clima"></p>
-            <p id="humidade"></p>
+            <p id="humidade"><span class="humidity"></span></p>
         </div>
     </main>
 
